Fix course sidebar text overlap

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -159,9 +159,9 @@ body.course-item-popup #learn-press-course-curriculum .learn-press-breadcrumb {
 	display: none !important;
 }
 
-// #popup-sidebar #learn-press-course-curriculum ul.curriculum-sections .section-content .course-item .course-item-title {
-// 	max-width: calc(100% - 128px);
-// }
+#popup-sidebar #learn-press-course-curriculum ul.curriculum-sections .section-content .course-item .course-item-title {
+	max-width: calc(100% - 128px);
+}
 
 // .course-item-lp_lesson {
 // 	display: flex !important;
